--- a/design/custom_superhero.css
+++ b/design/custom_superhero.css
@@ -971,7 +971,7 @@ table > tfoot > tr.danger > th {
     white-space: nowrap;
   }
 }
-.Preferences table.PreferenceGroup {
+.PreferenceGroup {
   width: 100%;
 }
 fieldset {
@@ -3758,6 +3758,9 @@ tr.Item:after {
 .DataList-Search .Media {
   margin-top: 5px;
 }
+.DataTable {
+  table-layout: fixed;
+}
 .DataTable h1,
 .DataTable h2,
 .DataTable h3,
@@ -3801,6 +3804,7 @@ tr.Item:after {
   font-size: 19px;
 }
 .DataTable .BigCount {
+  width: 10%;
   text-align: center;
 }
 @media (max-width: 767px) {
@@ -3812,15 +3816,20 @@ tr.Item:after {
   .DataTable .BigCount {
     display: none;
   }
+  .DataTable .BlockColumn {
+    width: 35%;
+  }
 }
 @media (max-width: 1199px) {
   .DataTable .FirstUser {
     display: none;
   }
+  .DataTable .BlockColumn {
+    width: 30%;
+  }
 }
 .BlockColumn {
   width: 20%;
-  min-width: 170px;
 }
 .CategoryTable .BlockColumn {
   width: 30%;
