--- a/less/shared/tables.less
+++ b/less/shared/tables.less
@@ -14,8 +14,8 @@
 
 table {
   &:extend(.table all);
+}
 
-  .Preferences &.PreferenceGroup {
-    width: 100%;
-  }
+.PreferenceGroup {
+  width: 100%;
 }
